src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABM_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For current prospects, is an ABM strategy in progress? For former prospects, was an ABM strategy used?</inlineHelpText>
        <label>ABM Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AE_Assignment_Auto_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>AE Assignment Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ARRNumber__c</fullName>
        <label>ARRNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountDevelopmentOwner_No_Activity_Days__c</fullName>
        <formula>TODAY() - Account_Development_Owner_Last_Activity__c</formula>
        <label>AccountDevelopmentOwner No Activity Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Added_to_Sequence__c</fullName>
        <description>WFR Contacts in Sequence &gt; 0</description>
        <label>Account Added to Sequence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Assignment_ID__c</fullName>
        <formula>MOD(VALUE( AE_Assignment_Auto_Number__c ) ,5) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Assignment ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Custom_Tags__c</fullName>
        <label>Account Custom Tags</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Development_Owner_Last_Activity__c</fullName>
        <label>Account Development Owner Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Development_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Development Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Inbound_Outbound__c</fullName>
        <label>Account Inbound/Outbound</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_New_RR_Assignmment_Id__c</fullName>
        <description>This field is Hidden and is used in Apex program logic for this org. Please do not delete.</description>
        <formula>MOD(VALUE(  NumberRR__c  ) ,4) +1</formula>
        <label>Account New RR Assignmment Id</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <label>Account Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Out_of_Sequence__c</fullName>
        <description>WFR Contacts in Sequence = 0</description>
        <label>Account Out of Sequence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Last_Activity__c</fullName>
        <label>Account Owner Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Owner_No_Activity_Days__c</fullName>
        <formula>TODAY() - Account_Owner_Last_Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner No Activity Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Status_Change_Date__c</fullName>
        <label>Account Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Qualified</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sales Prospect - Not Yet Working</fullName>
                </value>
                <value>
                    <fullName>Sales Prospect - Actively Working</fullName>
                </value>
                <value>
                    <fullName>Sales Prospect - Has Open Opportunity</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Lost Customer - Voluntary Churn</fullName>
                </value>
                <value>
                    <fullName>Lost Customer - Involuntary Churn</fullName>
                </value>
                <value>
                    <fullName>Former Sales Prospect - Contacted and Disqualified</fullName>
                </value>
                <value>
                    <fullName>Former Sales Prospect - Contacted and Opportunity Lost</fullName>
                </value>
                <value>
                    <fullName>Former Sales Prospect - Not in Target Market</fullName>
                </value>
                <value>
                    <fullName>Bad Data - No Longer in Business</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact - Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Do Not Contact - Blacklisted</fullName>
                </value>
                <value>
                    <fullName>Bad Data</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Do Not Contact</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Lost Customer - Involuntary</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Lost Customer - Voluntary</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Sales Opportunity</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Sales Prospecting</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Sales Rejected</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Account_Owner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Account Owner Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the primary billing contact for the account</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changed_Contact_Sequence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Contact Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <inlineHelpText>This Field gets updated through an apex trigger &quot;CountRelatedContacts&quot;.</inlineHelpText>
        <label>Contacts in Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Role_Static__c</fullName>
        <label>Created by Role (Static)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Won_Date__c</fullName>
        <label>Customer Won Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Days_Untouched__c</fullName>
        <formula>Today() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Untouched</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Size__c</fullName>
        <description>The number of sales people within an organization.</description>
        <label>Department Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Recommended_Technologies__c</fullName>
        <label>Diagnostic Recommended Technologies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Pardot</fullName>
                </value>
                <value>
                    <fullName>Hubspot</fullName>
                </value>
                <value>
                    <fullName>Act-On</fullName>
                </value>
                <value>
                    <fullName>Omniture</fullName>
                </value>
                <value>
                    <fullName>WebTrends</fullName>
                </value>
                <value>
                    <fullName>Coremetrics</fullName>
                </value>
                <value>
                    <fullName>Mixpanel</fullName>
                </value>
                <value>
                    <fullName>WooCommerce</fullName>
                </value>
                <value>
                    <fullName>Verisign</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>MarkMonitor</fullName>
                </value>
                <value>
                    <fullName>SiteSpect</fullName>
                </value>
                <value>
                    <fullName>Workday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disqualified_Reason_Detail__c</fullName>
        <description>List the details of the reason and any associated timeframe with a disqualified account</description>
        <label>Disqualified Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IST_Data__c</fullName>
        <label>IST Data</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunity_Count__c</fullName>
        <label>Lost Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberRR__c</fullName>
        <description>This field is Hidden and is used in Apex program logic for this org. Please do not delete.</description>
        <formula>TEXT(ARRNumber__c)</formula>
        <label>NumberRR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Count__c</fullName>
        <label>Open Opportunity Count</label>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round_Robin_Account_AE__c</fullName>
        <formula>CASE( Account_Assignment_ID__c , 
1,&quot;Ethan Carr&quot;, 
2,&quot;Adam Pierce&quot;,
3,&quot;Neil Arora&quot;,
4,&quot;Forest Spiegel&quot;,
5,&quot;Marshall Serlin&quot;,
&quot;None&quot;)</formula>
        <label>Round Robin Account AE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Technologies__c</fullName>
        <label>Sales Technologies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesloft</fullName>
                </value>
                <value>
                    <fullName>Outreach.io</fullName>
                </value>
                <value>
                    <fullName>ToutApp</fullName>
                </value>
                <value>
                    <fullName>Yesware</fullName>
                </value>
                <value>
                    <fullName>Persist.io</fullName>
                </value>
                <value>
                    <fullName>Sendbloom</fullName>
                </value>
                <value>
                    <fullName>Insidesales.com</fullName>
                </value>
                <value>
                    <fullName>Connect &amp; Sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Lost_Amount__c</fullName>
        <inlineHelpText>Total amount of Closed Lost Opportunities</inlineHelpText>
        <label>Total Lost Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Open_Pipeline__c</fullName>
        <inlineHelpText>Total open pipeline for an account</inlineHelpText>
        <label>Total Open Pipeline</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Type</field>
            <operation>notContain</operation>
            <value>Existing</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.AE_Accepted_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Won_Amount__c</fullName>
        <inlineHelpText>Total amount of Closed/Won Opportunities</inlineHelpText>
        <label>Total Won Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_Details__c</fullName>
        <inlineHelpText>Update with context whenever an Account&apos;s Type field is changed</inlineHelpText>
        <label>Type Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Voluntary Churn</fullName>
                </value>
                <value>
                    <fullName>Involuntary Churn</fullName>
                </value>
                <value>
                    <fullName>No Longer in Business</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venture_Capital__c</fullName>
        <label>Venture Capital</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kleiner Perkins</fullName>
                </value>
                <value>
                    <fullName>Sequoia Capital</fullName>
                </value>
                <value>
                    <fullName>Andreessen Horowitz</fullName>
                </value>
                <value>
                    <fullName>Accel Partners</fullName>
                </value>
                <value>
                    <fullName>Greylock Partners</fullName>
                </value>
                <value>
                    <fullName>Battery Ventures</fullName>
                </value>
                <value>
                    <fullName>IVP</fullName>
                </value>
                <value>
                    <fullName>Founders Fund</fullName>
                </value>
                <value>
                    <fullName>Redpoint</fullName>
                </value>
                <value>
                    <fullName>Bessemer Venture Partners</fullName>
                </value>
                <value>
                    <fullName>Matrix Partners</fullName>
                </value>
                <value>
                    <fullName>Venrock</fullName>
                </value>
                <value>
                    <fullName>NEA</fullName>
                </value>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>DFJ</fullName>
                </value>
                <value>
                    <fullName>Benchmark</fullName>
                </value>
                <value>
                    <fullName>Khosla</fullName>
                </value>
                <value>
                    <fullName>Norwest</fullName>
                </value>
                <value>
                    <fullName>InterWest</fullName>
                </value>
                <value>
                    <fullName>First Round Capital</fullName>
                </value>
                <value>
                    <fullName>Trinity</fullName>
                </value>
                <value>
                    <fullName>Shasta</fullName>
                </value>
                <value>
                    <fullName>Emergence Capital Partners</fullName>
                </value>
                <value>
                    <fullName>Meritech Capital Partners</fullName>
                </value>
                <value>
                    <fullName>Draper Fisher Jurvetson</fullName>
                </value>
                <value>
                    <fullName>Salesforce Ventures</fullName>
                </value>
                <value>
                    <fullName>Mayfield Fund</fullName>
                </value>
                <value>
                    <fullName>Google Ventures</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Company_Domain__c</fullName>
        <description>Node provided company domain name</description>
        <label>Company Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Available_Matches__c</fullName>
        <label>Node Available Matches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Node City Vertical Matches</fullName>
                </value>
                <value>
                    <fullName>Node City Matches</fullName>
                </value>
                <value>
                    <fullName>Node Vertical Matches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Node_Best_Matches_Context__c</fullName>
        <label>Node Best Matches Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Best_Matches__c</fullName>
        <label>Node Best Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_City_and_Category_Matches__c</fullName>
        <label>Node City and Category Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_City_and_Subcategory_Matches__c</fullName>
        <label>Node City and Subcategory Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Company_Description__c</fullName>
        <label>Node Company Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Company_Revenue__c</fullName>
        <label>Node Company Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Context_Formula__c</fullName>
        <description>Node-generated context with relevant information about an account.</description>
        <formula>BLANKVALUE(nde__Node_Context__c, &quot;Working on it...&quot;)</formula>
        <label>Node Context</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Context__c</fullName>
        <defaultValue>&quot;Working on it...&quot;</defaultValue>
        <description>Node-generated context with relevant information about an account</description>
        <label>Node Context Raw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Corporate_Parent__c</fullName>
        <label>Node Corporate Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Corporate_Subsidiaries__c</fullName>
        <label>Node Corporate Subsidiaries</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Data_Version__c</fullName>
        <label>Node Data Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Education__c</fullName>
        <label>Node Education</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Education_in_Common__c</fullName>
        <label>Node Education in Common</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Employee_Count__c</fullName>
        <description>Number of employees at the company</description>
        <label>Node Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Employee_Size__c</fullName>
        <label>Node Employee Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Generated_Formula__c</fullName>
        <formula>IF( nde__Node_Generated__c, IMAGE(&quot;https://ded8kzigizww9.cloudfront.net/node-generated-caps-2x-02.png&quot;, &quot;Node Generated&quot;, 12, 110),
IMAGE(&quot;https://ded8kzigizww9.cloudfront.net/node-analyzed-caps-2x-02.png&quot;, &quot;Node Analyzed&quot;, 12, 99))</formula>
        <label>Node Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Node Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nde__Node_Global_Parent_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Node Global Parent Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Subsidiary_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nde__Node_Global_Parent__c</fullName>
        <label>Node Global Parent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_City__c</fullName>
        <label>Node HQ City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Country__c</fullName>
        <label>Node HQ Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_State__c</fullName>
        <label>Node HQ State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Street__c</fullName>
        <label>Node HQ Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_HQ_Zip__c</fullName>
        <label>Node HQ Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Industry__c</fullName>
        <label>Node Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Internal__c</fullName>
        <description>This information in used by Node Sales Analyst</description>
        <label>Node Internal</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Keywords__c</fullName>
        <description>Keywords associated with a company</description>
        <label>Node Keywords</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__Node_Last_Modified_Date__c</fullName>
        <label>Node Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nde__Node_NAICS_Code__c</fullName>
        <description>Company NAICS code</description>
        <label>Node NAICS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_NAICS_Description__c</fullName>
        <description>Company NAICS code brief description</description>
        <label>Node NAICS Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Primary_Company_Name__c</fullName>
        <label>Node Primary Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Primary_Domain__c</fullName>
        <label>Node Primary Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Priority_Formula__c</fullName>
        <formula>CASE(nde__Node_Priority__c,
-1, &quot;N/A&quot;,
0, &quot;U&quot;,
1, &quot;C&quot;,
2, &quot;B&quot;,
3, &quot;A&quot;,
4, &quot;Closed&quot;,
10, &quot;D&quot;,
20, &quot;C&quot;,
30, &quot;B&quot;,
40, &quot;A&quot;,
100, &quot;Closed&quot;,
&quot;U&quot;)</formula>
        <label>Node Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Node Grade (#)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nde__Node_Subcategory_Matches__c</fullName>
        <label>Node Subcategory Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Target_Profile__c</fullName>
        <label>Node Target Profile</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nde__Node_Technologies_Found__c</fullName>
        <label>Node Technologies Found</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nde__Technologies_Used__c</fullName>
        <description>A Node-provided list of technologies used by an organization.</description>
        <label>Node Technologies Used</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nde__You_Should_Mention__c</fullName>
        <defaultValue>&quot;Coming soon! Data will appear here once processing is complete.&quot;</defaultValue>
        <label>Node You Should Mention</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zisf__ZoomInfo_Industry__c</fullName>
        <description>The Salesforce standard Industry field is only 40 characters in length. As ZoomInfo industries are sometimes longer than this, the ZoomInfo Industry field can hold up to 255 characters.</description>
        <label>ZoomInfo Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_id__c</fullName>
        <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
        <label>ZoomInfo ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__zoom_lastupdated__c</fullName>
        <description>Last updated from ZoomInfo timestamp</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>Accounts_Working_Active_Opportunity</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>nde__Node_Priority_Formula__c</columns>
        <columns>nde__Node_Employee_Size__c</columns>
        <columns>nde__Node_Industry__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Open_Opportunity_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>Accounts Working - Active Opportunity</label>
    </listViews>
</CustomObject>